Closed
Bug 363235
Opened 19 years ago
Closed 19 years ago
[FIX]Regression with display of image placeholders when an invalid protocol is used
Categories
(Core :: Layout, defect, P1)
Core
Layout
Tracking
()
VERIFIED
FIXED
mozilla1.9alpha1
People
(Reporter: martijn.martijn, Assigned: bzbarsky)
References
Details
(4 keywords)
Attachments
(2 files)
|
420 bytes,
text/html
|
Details | |
|
978 bytes,
patch
|
sicking
:
review+
sicking
:
superreview+
jay
:
approval1.8.1.2+
jay
:
approval1.8.0.10+
|
Details | Diff | Splinter Review |
This bug was spun off from bug 307387.
See upcoming testcase.
When the img has a scr with an invalid protocl, the height and width of the placeholder becomes 0, even when a width and height is set in css.
This regressed on trunk between 2006-06-24 and 2006-06-27, I think it's a regression from bug 181860.
On 1.8.0.x/1.8.1 branch, I'm seeing a regression in that the first img in the testcase doesn't show up the alternate text anymore, this regressed on the 1.8.1 branch between 2006-07-04 and 2006-07-06, which coincides with the landing of the patch for bug 181860.
| Reporter | ||
Comment 1•19 years ago
|
||
| Assignee | ||
Comment 2•19 years ago
|
||
Sicking, how come nsNoDataProtocolContentPolicy uses REJECT_SERVER? That's basically the return value that indicates content blocking is enabled for that site, so hide all traces of the image. Don't you want REJECT_REQUEST? That certainly fixes the issue on trunk for me...
Flags: blocking1.9?
Flags: blocking1.8.1.2?
Flags: blocking1.8.0.10?
Comment 3•19 years ago
|
||
Probably not a true blocker, but would be good to fix and may be easy
Flags: blocking1.8.1.2?
Flags: blocking1.8.1.2+
Flags: blocking1.8.0.10?
Flags: blocking1.8.0.10+
| Assignee | ||
Comment 4•19 years ago
|
||
Attachment #249072 -
Flags: superreview?(bugmail)
Attachment #249072 -
Flags: review?(bugmail)
| Assignee | ||
Updated•19 years ago
|
Assignee: nobody → bzbarsky
OS: Windows XP → All
Priority: -- → P1
Hardware: PC → All
Summary: Regression with display of image placeholders when an invalid protocol is used → [FIX]Regression with display of image placeholders when an invalid protocol is used
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 249072 [details] [diff] [review]
Fix
Thanks man
Attachment #249072 -
Flags: superreview?(bugmail)
Attachment #249072 -
Flags: superreview+
Attachment #249072 -
Flags: review?(bugmail)
Attachment #249072 -
Flags: review+
| Assignee | ||
Comment 6•19 years ago
|
||
Fixed. Someone else may need to land this on branches...
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 7•19 years ago
|
||
Comment on attachment 249072 [details] [diff] [review]
Fix
This is very safe and fixes a regression from a security fix.
Attachment #249072 -
Flags: approval1.8.1.2?
Attachment #249072 -
Flags: approval1.8.0.10?
| Assignee | ||
Updated•19 years ago
|
Flags: blocking1.9? → in-testsuite?
Comment 8•19 years ago
|
||
Comment on attachment 249072 [details] [diff] [review]
Fix
Approved for both branches, a=jay for drivers.
Attachment #249072 -
Flags: approval1.8.1.2?
Attachment #249072 -
Flags: approval1.8.1.2+
Attachment #249072 -
Flags: approval1.8.0.10?
Attachment #249072 -
Flags: approval1.8.0.10+
Checked in on branches
Keywords: fixed1.8.0.10,
fixed1.8.1.2
Comment 10•19 years ago
|
||
Verified fixed on 1.8.1.2 and 1.8.0.10 with Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.1.2pre) Gecko/2007011004 BonEcho/2.0.0.2pre and Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.8.0.10pre) Gecko/20070111 Firefox/1.5.0.10pre
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•