Fix bug 363235 -- REJECT_SERVER is taken to mean "content is blocked by user", and that's not what we want here.  r+sr=sicking